@@ -4,6 +4,7 @@ import com.fooddelivery.orderservice.filter.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -28,25 +29,36 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(AbstractHttpConfigurer::disable)
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // 启用CORS
-            .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                // 使用 AntPathRequestMatcher 显式匹配路径，解决 403 问题
-                .requestMatchers(new AntPathRequestMatcher("/orders/internal/**")).permitAll()
-                // 放行 Swagger
-                .requestMatchers(new AntPathRequestMatcher("/swagger-ui/**")).permitAll()
-                .requestMatchers(new AntPathRequestMatcher("/v3/api-docs/**")).permitAll()
-                // 放行监控端点
-                .requestMatchers(new AntPathRequestMatcher("/actuator/**")).permitAll()
-                // 临时允许admin接口用于测试
-                .requestMatchers(new AntPathRequestMatcher("/api/admin/orders/**")).permitAll()
-                // 临时允许支付接口用于测试
-                .requestMatchers(new AntPathRequestMatcher("/orders/*/pay")).permitAll()
-                // 其他所有请求必须认证
-                .anyRequest().authenticated()
-            )
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // 启用CORS
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        // ========== Swagger & 监控 ==========
+                        .requestMatchers(new AntPathRequestMatcher("/swagger-ui/**")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/v3/api-docs/**")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/swagger-resources/**")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/actuator/**")).permitAll()
+
+                        // ========== 内部/管理接口 ==========
+                        // 兼容 /api 前缀，防止网关透传路径导致 403
+                        .requestMatchers(new AntPathRequestMatcher("/orders/internal/**")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/api/orders/internal/**")).permitAll()
+
+                        .requestMatchers(new AntPathRequestMatcher("/api/admin/orders/**")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/admin/orders/**")).permitAll()
+
+                        // ========== 支付接口 ==========
+                        // 临时允许支付接口用于测试 (同时兼容两种路径)
+                        .requestMatchers(new AntPathRequestMatcher("/orders/*/pay")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/api/orders/*/pay")).permitAll()
+
+                        // ========== 关键：OPTIONS 预检请求 ==========
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // ========== 其他所有请求必须认证 ==========
+                        // 创建订单、查询订单列表等操作必须登录
+                        .anyRequest().authenticated())
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
@@ -57,16 +69,17 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // 允许的源（开发环境允许所有，生产环境应该限制具体域名）
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // 允许的源（开发环境允许所有）
+        configuration.setAllowedOriginPatterns(List.of("*"));
 
         // 允许的HTTP方法
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
 
         // 允许的请求头
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
 
         // 允许携带认证信息（如Cookie、Authorization header）
+        // 这一点非常重要，必须为 true，否则前端携带 Token 会报错
         configuration.setAllowCredentials(true);
 
         // 预检请求的有效期（秒）
